# cppDaq

./: CMakeLists.txt  CMakeSettings.json  readme.md
app/: CMakeLists.txt
app/src/: check.cpp  check.h  cppDaq.cpp  cppDaq.h  create.cpp  create.h  daq_c.cpp  daq_c.h  daq_co_create_status.h  dbgprint.cpp  dbgprint.h  find_device.cpp  find_device.h  io_types.h  main.cpp  physic_types.h  pwm.cpp  pwm.h  read.cpp  read.h  sanitize_inputs.h  term_colors.h  write.cpp  write.h
app/src/driver/ni_daqmx_driver/: daqmx_create_analog.cpp  daqmx_create_analog.h  daqmx_create_analog_continuous.cpp  daqmx_create_analog_continuous.h  daqmx_create_digital.cpp  daqmx_create_digital.h  daqmx_create_digital_continuous.cpp  daqmx_create_digital_continuous.h  daqmx_read_analog.cpp  daqmx_read_analog.h  daqmx_read_analog_continuous.cpp  daqmx_read_digital.cpp  daqmx_read_digital_continuous.cpp  daqmx_write_analog.cpp  daqmx_write_analog_continuous.cpp  daqmx_write_digital.cpp  daqmx_write_digital_continuous.cpp
dep/daqmx/include/: NIDAQmx.h
dep/daqmx/lib32/msvc/: NIDAQmx.lib
dep/daqmx/lib64/msvc/: nixnet.lib  nixntipstack.lib
doc/R208 wiring/: wiring.docx
doc/UsingWithLabview/: CalibrationReadyFGV.vi  CalibrationStart.vi  CompterRotationsDAQ.vi  Direction.vi  GotoFGV.vi  HomeFGV.vi  ReadHomeVoltage.vi  RotationDAQ.vi  RotationRun.vi  RstCount.vi  SerializeTimeCalibration.vi  TickFGV.vi  TimeCal.txt  TimePerTurnFGV.vi  TurnFGV.vi  cDaq.aliases  cDaq.lvlps  cDaq.lvproj  createDAQ.vi  destroyDAQ.vi  isHome.vi  isHomeCheckFGV.vi  main.vi  test.vi
doc/UsingWithLabview/cDaqlib/: Report.html  cDaq.lvlib  dir.mnu
doc/UsingWithLabview/cDaqlib/VIs/: create c Daq.vi  destroy c Daq .vi  dir.mnu  get analog value .vi  get status .vi  set analog value .vi  set digital value .vi  start analog pulse .vi  start digital pulse .vi  start digital software pulse .vi  stop analog pulse .vi  stop digital pulse .vi  stop digital software pulse .vi  update digital software pulse .vi
doc/UsingWithLabview/controls/: UI Data.ctl
doc/UsingWithLabview/documentation/: Queued Message Handler Documentation.html
doc/UsingWithLabview/support/: Check Loop Error.vi  Error Handler - Event Handling Loop.vi  Error Handler - Message Handling Loop.vi
doc/UsingWithLabview/support/Message Queue/: All Message Queues.ctl  Create All Message Queues.vi  Dequeue Message.vi  Enqueue Message (Array).vi  Enqueue Message (Single).vi  Enqueue Message.vi  Message Cluster.ctl  Obtain Message Queue.vi
doc/UsingWithLabview/support/User Event - Stop/: Create User Event - Stop.vi  Destroy User Event - Stop.vi  Fire User Event - Stop.vi
doc/asciidoc/: cDaqHowTo.adoc
test/: CMakeLists.txt  example-12-cpp-api-double-free.cpp  example1-cpp-api-basic-read-write.cpp  example10-cpp-api-create-destroy-cycling.cpp  example11-c-api-create-destroy-cycling.cpp  example13-c-api-double-free.cpp  example14-cpp-using_DigitalWrite_AnalogWriteCo.cpp  example15-cpp-using_DigitalWrite_to_test_TXS0104V.cpp  example2-cpp-api-device-select.cpp  example3-cpp-api-thread-read-write.cpp  example4-c-api.cpp  example5-c-api-r208driver-usb6001.cpp  example6-c-api-analog-pwm.cpp  example7-c-api-digital-output.cpp  example8-cpp-api-analog-pwm.cpp  example9-cpp-api-analog-input-read.cpp  main.cpp  test.cpp
